# psychrag

./: .cursorrules  .env.example  .gitignore  README.md  TODO-future.md  ai-implementation.md  check_db.py  convert_remaining_tests.py  full-results.txt  project-structure.md  psychrag.config.json  pyproject-oldergpu.toml  pyproject.toml  requirements-legacy-gpu.txt  requirements.txt  results.txt  scratch.md
.claude/: instructions.md  settings.local.json
.claude/commands/: implement-tick.md  prd-new.md  prd-tickets.md
.github/workflows/: DeployDocs2  docs.yml
docs/: getting-started.md  index.md  mkdocs.yml  requirements.txt
documentation/: CONVERSION_SUMMARY.md  _test_delta.md  api-endpoint-compatibility-prd.T01.md  api-endpoint-compatibility-prd.T02.md  api-endpoint-compatibility-prd.T03.md  augmentation.md  breadcrumb-refactoring-plan.md  docker-deployment-guide.md  integration-tests-needed.md  missing_tests.md  pre-release-audit.md  psychRAG-test.code-workspace  raptor-miniQa2.md  rename-to-vulcanlab-checklist.md  retrieval copy.md  retrieval.md  todo..md  todo.md  tsvector-trigger-verification.md  utest_strategy.md  wsl_setup_guide.md
documentation/docker-all-in-one/: DOCKER_SUMMARY.md  docker-deployment-guide.md  docker-quickstart.md
documentation/rename/: rename-to-vulcanlab.md
documentation/work/: PRD.test-suite-fixes.T01.md  PRD.test-suite-fixes.T02.md  PRD.test-suite-fixes.T03.md  PRD.test-suite-fixes.T04.md  PRD.test-suite-fixes.T05.md  PRD.test-suite-fixes.T06.md  PRD.test-suite-fixes.md  cleanup-unused-api-calls.T001.md  cleanup-unused-api-calls.T002.md  cleanup-unused-api-calls.T003.md  cleanup-unused-api-calls.T004.md  cleanup-unused-api-calls.T005.md  corpus_prd.D002.md  corpus_prd.D003.md  corpus_prd.D004.md  corpus_prd.T002.md  corpus_prd.T003.md  corpus_prd.T004.md  corpus_prd.T005.md  custom_queries_prd.md  prd-rag-settings.D03.md  prd-rag-settings.D04.md  prd-rag-settings.D05.md  prd-rag-settings.D06.md  prd-rag-settings.T01.md  prd-rag-settings.T02.md  prd-rag-settings.T03.md  prd-rag-settings.T04.md  prd-rag-settings.T05.md  prd-rag-settings.md  prd-rag-settings_completed-work.md  prd-rename-vulcanlab.F03.md  prd-rename-vulcanlab.F04.md  prd-rename-vulcanlab.T01.md  prd-rename-vulcanlab.T02.md  prd-rename-vulcanlab.T05.md  prd-rename-vulcanlab.md  templates_prd.T01.md  templates_prd.T02.md  templates_prd.T03.md  (+2 more)
llm_logs/: suggest_heading_20251120_144616.md
migrations/: 001_add_chunks_table.sql  002_add_start_line_index.sql  003_add_queries_table.sql  004_add_tsvector_and_retrieved_context.sql  005_add_clean_retrieval_context.sql  006_add_files_metadata.py  007_create_io_files_table.sql  008_add_processing_status.sql  009_create_results_table.sql  010_create_prompt_templates.sql  010_refactor_heading_breadcrumbs.py  011_create_prompt_templates.sql  012_create_prompt_meta.sql  013_create_rag_config.sql  014_add_citation_columns.sql  DELETE_DB_USER.sql  run_migration_010.py
psychrag_ui/: README.md  package-lock.json  package.json
raw-data/: book.epub  top-books.csv  top-psych-papers.csv
raw-data/books/: Achor, Shawn - The Happiness Advantage_ The Seven Principles of Positive Psychology That Fuel Success and Performance at Work (2010, Crown Business) - libgen.li.epub  Psych The Story of the Human Mind.epub
src/psychrag/: __init__.py
src/psychrag_api/: README.md  __init__.py  __main__.py  config.py  dependencies.py  main.py
test-data/: happiness_advantage_toc.md  test3.md  test3.sanitized copy.md  test3.sanitized.titles.md  test3.sanitized.vec_sugg.md  test3.title_changes.md  test3.titles.md  test3.toc_titles.md
tests/: conftest.py
tests/unit/: conftest.py  mock_helpers.py  (+49 more)
(+199 files in other folders)
