[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychrag"
version = "0.1.0"
description = "A Retrieval-Augmented Generation system for psychology literature"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Document conversion
    "docling",
    "docling-hierarchical-pdf",
    "ebooklib",
    "beautifulsoup4",
    "markdownify",
    "pymupdf",

    # Database
    "psycopg[binary]",
    "sqlalchemy",
    "pgvector",

    # Configuration
    "pydantic",
    "pydantic-settings",
    "python-dotenv",

    # LLM/AI
    "pydantic-ai",
    "langchain-core",
    "langchain-openai",
    "langchain-google-genai",

    # NLP
    "spacy",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",

    # Reranking
    "transformers",
    "torch",

    # Testing
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
